Resolves: tdf#113405 don't try and assign a master page to a master page

when in master view mode go straight to adding the master page to the
list of masters

Change-Id: I345ce30b44099cd546267fb2acae0b1cc8a73dbe